--- a/content/it_resources/server_notes/php72_74.md
+++ b/content/it_resources/server_notes/php72_74.md
@@ -1,42 +1,30 @@
 ---
-title: "Updating PHP 7.2 > 7.4 on Ubuntu 18"
-author: "JMarks"
+title: "Updating PHP on Ubuntu"
+author: "BAnderson"
 description: ""
 weight: 9
 ---
 ---
-I have had problems getting PHP 7.2 to update to 7.4 on Ubuntu 18.04. Here's what I did to get it working.
 
-1. Manually add PHP repository and check again
+
+1. Edit playbooks/updates/upgrade-php.yml for new edition
 ```
-sudo apt install software-properties-common
-sudo add-apt-repository ppa:ondrej/php
-sudo apt update
-sudo apt upgrade
+Last used to update 7.4 to 8.2
+Make sure repository is current and all edition numbers are changed ex. 8.2 -> 8.3
 ```
 
-2. Check PHP version again
+2. If playbook failes with the following error
 ```
-php -v
+{{< hint info >}}
+fatal: [unrnursingconf.com]: FAILED! => changed=false
+  msg: 'Failed to update apt cache: unknown reason'
+  {{< /hint>}}
+  First try
+  wget -qO- https://repos-droplet.digitalocean.com/install.sh | sudo bash
+  if that does not work rteinstall droplet agent
+sudo dpkg --configure -a
+sudo apt-get remove droplet-agent
+sudo rm /etc/apt/sources.list.d/droplet-agent.list
+sudo apt-get update
+wget -qO- https://repos-droplet.digitalocean.com/install.sh | sudo bash
 ```
-
-If PHP still shows 7.2 then 7.4 needs to be manually installed
-
-3. Install PHP 7.4
-```
-sudo apt install php7.4
-```
-
-4. Enable PHP 7.4
-Enable PHP 7.4 and then disable PHP 7.2 and then restart Apache
-```
-sudo a2enmod php7.4
-sudo a2dismod php7.2
-sudo systemctl restart apache2.service
-```
-
-Check PHP version again
-```
-php -v
-```
-It should now show PHP 7.4
