--- a/content/it_resources/server_notes/php72_74.md
+++ b/content/it_resources/server_notes/php72_74.md
@@ -19,9 +19,11 @@ Make sure repository is current and all edition numbers are changed ex. 8.2 -> 8
 fatal: [unrnursingconf.com]: FAILED! => changed=false
   msg: 'Failed to update apt cache: unknown reason'
   {{< /hint>}}
-  First try
-  wget -qO- https://repos-droplet.digitalocean.com/install.sh | sudo bash
-  if that does not work rteinstall droplet agent
+```
+First try
+wget -qO- https://repos-droplet.digitalocean.com/install.sh | sudo bash
+```
+If that does not work rteinstall droplet agent
 sudo dpkg --configure -a
 sudo apt-get remove droplet-agent
 sudo rm /etc/apt/sources.list.d/droplet-agent.list
